#344 Adding test to validate we add vaccines to the pet DTO